force-app/main/default/objects/Grant_Review__c.object
<CustomObject>
    <fields>
        <fullName>Date_Received__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approve Extension</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_If_Rejected__c</fullName>
        <label>End Date (If Rejected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Further_Details__c</fullName>
        <label>Further Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Application__c</fullName>
        <label>Grant Application</label>
        <referenceTo>Grant_Application__c</referenceTo>
        <relationshipName>Grant_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grant_Request__c</fullName>
        <label>Grant Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>Grant_Application__r.Parent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Requests_Extension__c</fullName>
        <label>Parent Requests Extension?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <label>Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Grant_Application__r.School__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Online</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Aid Review</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Grant Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Aid Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Approve_Only_Grants_Subject_to_Review</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(Grant_Application__r.Scope_of_Grant__c)=&quot;Indefinite&quot;,TEXT(Decision__c)=&quot;Approve Extension&quot;)</errorConditionFormula>
        <errorMessage>The Scope of the Grant has been set as &quot;Indefinite&quot; without needing a review. No Approval is required. Change the scope field in the Application record, if you would like to introduce a review cycle.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Required_for_Rejected_Reviews</fullName>
        <active>true</active>
        <description>Ensure that an end date is added for a rejected review so that the financial aid application shows the correct status</description>
        <errorConditionFormula>AND(TEXT(Decision__c) = &quot;Reject&quot;, TEXT(End_Date_If_Rejected__c) = &quot;&quot;)</errorConditionFormula>
        <errorMessage>As this review has been rejected you must indicate the date on which the financial aid will end. Typically this is the 31/07 of the relevant academic year.</errorMessage>
    </validationRules>
</CustomObject>